--- a/hw06.Rmd
+++ b/hw06.Rmd
@@ -17,6 +17,9 @@ Load packages
 suppressPackageStartupMessages(library(tidyverse))
 library(stringr)
 suppressPackageStartupMessages(library(testthat))
+suppressPackageStartupMessages(library(lazyeval))
+library(gapminder)
+library(knitr)
 ```
 
 ## 1. Character data
@@ -345,4 +348,73 @@ Telephone numbers in Canada have this format: "+X (XXX) XXX-XXXX".
 
 str_view(test_num, pattern = "^\\+1 \\([1-9][0-9]{2}\\) [0-9]{3}-[0-9]{4}$", match = TRUE)
 ```
+
+## 2. Writing functions
+
+Here, I will demonstrate wrting a function I name `find_group_min_max` with the `gapminder` dataset.
+
+This function will accept a dataframe, a group, a category, and option to plot. It will output a dataframe that will determine the min and max value of the given category for all the groups and optionally plot this result.
+
+First I will define the function.
+
+```{r}
+find_group_min_max <- function(df, group, category, plot = FALSE){
+  output <- df %>% #take DF
+    group_by_(group) %>% #group
+    summarise_(min = interp(~min(x), x=as.name(category)), #Summarize min and max
+               max = interp(~max(x), x=as.name(category)))
+  
+  # Determine whether to plot or not
+  if (plot == TRUE){
+    # First gather
+    gather_output <- output %>%
+      gather(key = min_or_max, value = temp_name, min, max)
+    
+    #Rename 3rd column from temp_name to actual category name
+    colnames(gather_output)[3] <- category
+    
+    # Now plot
+    plot <- ggplot(gather_output, aes_string(x = group, y = category)) +
+      geom_bar(aes(fill = min_or_max), stat="identity", position = position_dodge()) +
+      scale_fill_manual(values = c("min" = "red", "max" = "darkgreen")) +
+      theme_bw()
+    
+    print(plot)
+    
+    # Return output df
+    return(output)
+  }
+  else {
+    # No plot
+    return(output)
+  }
+}
+```
+
+Note: the use of `lazyeval::interp()` is needed in this function. Also I use `group_by_` and `summarise_` instead of `group_by` and `summarise` in order to pass function arguments into these dplyr functions.
+
+Now I will test the function with `gapminder`. I will pass the category as "lifeExp". Note that the defualt is not to plot.
+
+```{r}
+find_group_min_max(df = gapminder, group = "continent", category = "lifeExp") %>%
+  kable()
+```
+
+I will repeat with category as "gdpPercap".
+
+```{r}
+find_group_min_max(df = gapminder, group = "continent", category = "gdpPercap") %>%
+  kable()
+```
+
+Now I will repeat these same 2 examples. However, I will pass the argument `plot = TRUE` so that the corresponding plot is displayed.
+
+```{r}
+find_group_min_max(df = gapminder, group = "continent", category = "lifeExp", plot = TRUE) %>%
+  kable()
+
+find_group_min_max(df = gapminder, group = "continent", category = "gdpPercap", plot = TRUE) %>%
+  kable()
+```
+
 
